--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -51,8 +51,8 @@
         <div *ngIf="submitted && errorResponse">
             <div class="alert alert-pink alert-dismissable fade show">
                 <button class="close" data-dismiss="alert" aria-label="Close"></button>
-                <h3 class="font-strong">{{errorResponse.status}}</h3>
-                <span [innerHTML]="errorResponse.error.message"></span> 
+                <h3 class="font-strong">{{errorResponse.status === 0 ? "Certificat invalid" : errorResponse.status}}</h3>
+                <span [innerHTML]="errorResponse.message"></span> 
             </div>
         </div>
         <div class="form-group mb-4">
