--- a/src/app/pages/good-deal/good-deal-edit/good-deal-edit.component.html
+++ b/src/app/pages/good-deal/good-deal-edit/good-deal-edit.component.html
@@ -58,7 +58,7 @@
 
             <div class="ibox-footer row">
               <div class="col-sm-10">
-                <button class="btn btn-primary mr-2" [disabled]="hasEdit" type="submit">Mettre à jour</button>
+                <button class="btn btn-primary mr-2" [disabled]="!hasEdit" type="submit">Mettre à jour</button>
                 <a class="btn btn-secondary" [routerLink]="['/annonces']" routerLinkActive="active">Retour</a>
               </div>
             </div>
